// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-bqyKva cUnZrS Sidebar-resources "
>
  <div
    className="sc-kstrdz"
  >
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP sc-jrAGrp jnEojC jhbijv"
        >
          <div
            className="sc-gKsewC sc-iBPRYJ jSnJQd kEXXSo isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bdfBwQ jvkcBC isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        resources
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource4"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource4
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:36:03.000Z"
                  title="2017-12-21T15:36:03.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource9"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource9
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:58.000Z"
                  title="2017-12-21T15:35:58.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource19"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource19
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:48.000Z"
                  title="2017-12-21T15:35:48.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource29"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource29
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:38.000Z"
                  title="2017-12-21T15:35:38.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource39"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource39
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:28.000Z"
                  title="2017-12-21T15:35:28.000Z"
                >
                  &lt;45s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource49"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource49
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:18.000Z"
                  title="2017-12-21T15:35:18.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="resource54"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  resource54
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:13.000Z"
                  title="2017-12-21T15:35:13.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: success"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Completed in 12s, with issues
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-bqyKva cUnZrS Sidebar-resources "
>
  <div
    className="sc-kstrdz"
  >
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP sc-jrAGrp jnEojC jhbijv"
        >
          <div
            className="sc-gKsewC sc-iBPRYJ jSnJQd kEXXSo isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bdfBwQ jvkcBC isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        resources
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-bqyKva cUnZrS Sidebar-resources "
>
  <div
    className="sc-kstrdz"
  >
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP sc-jrAGrp jnEojC jhbijv"
        >
          <div
            className="sc-gKsewC sc-iBPRYJ jSnJQd kEXXSo isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bdfBwQ jvkcBC isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        resources
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="vigoda"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:36:07.000Z"
                  title="2017-12-21T15:36:07.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isUnhealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: error"
              >
                <svg
                  fill="#ffffff"
                >
                  error.svg
                </svg>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Update error
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="snack"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                <time
                  dateTime="2017-12-21T15:35:57.000Z"
                  title="2017-12-21T15:35:57.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isUnhealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: error"
              >
                <svg
                  fill="#ffffff"
                >
                  error.svg
                </svg>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Update error
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-bqyKva cUnZrS Sidebar-resources "
>
  <div
    className="sc-kstrdz"
  >
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP sc-jrAGrp jnEojC jhbijv"
        >
          <div
            className="sc-gKsewC sc-iBPRYJ jSnJQd kEXXSo isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bdfBwQ jvkcBC isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-hBEYos bxmZqH"
      >
        resources
      </div>
      <ul
        className="sc-fodVxV ewSMuO"
      >
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="vigoda"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                —
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Updating…
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-jSgupP jnEojC u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-gKsewC jSnJQd  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-fubCfw giLNdL"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe sc-iqHYGH nCYed gNenIV"
                title="snack"
              >
                <span
                  className="sc-crrsfI jcYrCe"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-dQppl rWCkn"
              >
                —
              </span>
              <button
                className="sc-eCssSg fIfNJU SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-pFZIQ bHvBzm"
            >
              <div
                aria-describedby={null}
                className="sc-bdfBwQ jvkcBC isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-kEjbxe nCYed"
              >
                Updating…
              </div>
              <button
                className="sc-gsTCUz sZTnv"
                onClick={[Function]}
                title="Pin to Top"
              >
                <svg
                  className="sc-hKgILt cXIGbx"
                >
                  pin.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
